test/files/run/bug4556.check
Type in expressions to have them evaluated.
Type :help for more information.

scala> 

scala> :type [List(1, 2, 3)]
<console>:2: error: illegal start of simple expression
       [List(1, 2, 3)]
       ^


scala> :type List(1, 2, 3)
List[Int]

scala> 

scala> 
